# eggshell

./: .gitignore  Cargo.toml  README.md  gather_data.sh  pyproject.toml
.cargo/: config.toml
.github/workflows/: CI.yml
benches/: bench.rs
data/dataset/: 5k_dataset.json  5k_dataset_new.json  5k_dataset_new_syntax.json
data/rise/: guided_eqsat.csv  start_and_goal.csv
data/rise/egraph_jsons/: ser_egraph_arrayPacking_SRCL_step_0_iteration_0_root_39.json  ser_egraph_arrayPacking_SRCL_step_0_iteration_2_root_39.json  ser_egraph_arrayPacking_SRCL_step_0_iteration_5_root_39.json  ser_egraph_arrayPacking_SRCL_step_0_iteration_6_root_39.json  ser_egraph_arrayPacking_SRCL_step_1_iteration_0_root_65.json  ser_egraph_arrayPacking_SRCL_step_1_iteration_1_root_65.json  ser_egraph_arrayPacking_SRCL_step_1_iteration_2_root_65.json  ser_egraph_arrayPacking_SRCL_step_1_iteration_4_root_65.json  ser_egraph_arrayPacking_SRCL_step_1_iteration_5_root_65.json  ser_egraph_arrayPacking_SRCL_step_1_iteration_8_root_65.json  ser_egraph_arrayPacking_SRCL_step_2_iteration_0_root_129.json  ser_egraph_arrayPacking_SRCL_step_2_iteration_1_root_129.json  ser_egraph_arrayPacking_SRCL_step_2_iteration_2_root_129.json  ser_egraph_arrayPacking_SRCL_step_2_iteration_3_root_129.json  ser_egraph_arrayPacking_SRCL_step_2_iteration_4_root_129.json  ser_egraph_arrayPacking_SRCL_step_3_iteration_0_root_156.json  ser_egraph_arrayPacking_SRCL_step_3_iteration_1_root_156.json  ser_egraph_arrayPacking_SRCL_step_3_iteration_3_root_156.json  ser_egraph_baseline_step_0_iteration_0_root_39.json  ser_egraph_baseline_step_0_iteration_1_root_39.json  ser_egraph_baseline_step_0_iteration_2_root_39.json  ser_egraph_blocking_SR_step_0_iteration_3_root_39.json  ser_egraph_blocking_SR_step_0_iteration_4_root_39.json  ser_egraph_blocking_SR_step_0_iteration_5_root_39.json  ser_egraph_blocking_SR_step_0_iteration_6_root_39.json  ser_egraph_blocking_SR_step_1_iteration_0_root_65.json  ser_egraph_blocking_SR_step_1_iteration_10_root_65.json  ser_egraph_blocking_SR_step_1_iteration_1_root_65.json  ser_egraph_blocking_SR_step_1_iteration_2_root_65.json  ser_egraph_blocking_SR_step_1_iteration_3_root_65.json  ser_egraph_blocking_SR_step_1_iteration_4_root_65.json  ser_egraph_blocking_SR_step_1_iteration_6_root_65.json  ser_egraph_blocking_SR_step_1_iteration_7_root_65.json  ser_egraph_blocking_SR_step_1_iteration_8_root_65.json  ser_egraph_blocking_SR_step_1_iteration_9_root_65.json  ser_egraph_cacheBlocks_SRCL_step_0_iteration_1_root_39.json  ser_egraph_cacheBlocks_SRCL_step_0_iteration_2_root_39.json  ser_egraph_cacheBlocks_SRCL_step_0_iteration_3_root_39.json  ser_egraph_cacheBlocks_SRCL_step_0_iteration_5_root_39.json  ser_egraph_cacheBlocks_SRCL_step_1_iteration_1_root_65.json  (+101 more)
data/tree_comps/: example.txt  rise.txt
eggshell/: __init__.py  __init__.pyi  halide.pyi  rise.pyi  simple.pyi  test.py
examples/: baseline.rs  blocking.rs
python/eggshell/: __init__.py  __init__.pyi  arithmetic.pyi  halide.pyi  rise.pyi  simple.pyi
src/: argparse.rs  baseline.rs  cli.rs  cost_fn.rs  error.rs  errors.rs  explanation.rs  features.rs  flattened.rs  graph_distance.rs  lib.rs  main.rs  node.rs  sample.rs  sketches.rs  tree_distance.rs  typing.rs  utils.rs  viz.rs
src/analysis/: contains.rs  count_terms.rs  extract.rs  mod.rs
src/analysis/commutative_semigroup/: count_terms.rs  expr_count.rs  expr_count_float.rs  forced_loops.rs  loop_cause.rs  loop_count_terms.rs  loop_free_count.rs  mod.rs  term_count.rs
src/analysis/semilattice/: ast_size.rs  contains.rs  extract.rs  mod.rs
src/distance/: count.rs  extract.rs  graph.rs  ids.rs  min.rs  mod.rs  nodes.rs  sampling.rs  str.rs  structural.rs  tree.rs  zs.rs
src/distance/rise/: address.rs  expr.rs  label.rs  mod.rs  nat.rs  primitive.rs  types.rs
src/eqsat/: class_cost.rs  conf.rs  guide.rs  hooks.rs  mod.rs  results.rs  scheduler.rs  utils.rs
src/extraction/: bottom_up.rs  mod.rs
src/io/: mod.rs  reader.rs  sampling.rs  structs.rs  writer.rs
src/meta_lang/: extract.rs  mod.rs  partial.rs  sketch_lang.rs
src/meta_lang/partial/: error.rs  mod.rs  parse.rs
src/meta_lang/probabilistic/: comparison.rs  mod.rs
src/meta_lang/sketch/: containment.rs  error.rs  extraction.rs  guide.rs  mod.rs
src/partial/: error.rs  lang.rs  mod.rs  parse.rs
src/probabilistic/: comparison.rs  mod.rs
src/python/: data.rs  eqsat.rs  err.rs  extraction.rs  flat.rs  halide.rs  io.rs  macros.rs  mod.rs  monomorphize.rs  pyast.rs  pylang.rs  pysketch.rs  pytrs.rs  raw_ast.rs  raw_lang.rs  raw_sketch.rs
src/python/data/: mod.rs  nodes.rs
src/python/tree_data/: nodes.rs
src/rewrite_system/: mod.rs
src/rewrite_system/arithmetic/: mod.rs  rules.rs
src/rewrite_system/dummy_rise/: mod.rs  rules.rs  substitute.rs
src/rewrite_system/halide/: data.rs  mod.rs
src/rewrite_system/halide/rules/: add.rs  and.rs  andor.rs  div.rs  eq.rs  ineq.rs  (+8 more)
src/rewrite_system/herbie/: cost.rs  mod.rs  rules.rs
src/rewrite_system/rise/: analysis.rs  func.rs  indices.rs  kind.rs  lang.rs  mod.rs  pp.rs  rules.rs  shifted.rs  substitute.rs
src/rewrite_system/simple/: mod.rs
src/rise/: analysis.rs  beta.rs  db.rs  func.rs  kind.rs  lang.rs  mod.rs  pp.rs  predicates.rs  rules.rs  shifted.rs
src/rise/appliers/: beta.rs  func.rs  mod.rs  nat.rs  shifted.rs
src/rise/nat/: applier.rs  mod.rs  monomial.rs
src/sampling/: choice.rs  choices.rs  mod.rs  partial.rs  utils.rs
src/sampling/sampler/: cost.rs  count.rs  mod.rs  simple.rs
src/sampling/strategy/: cost.rs  count.rs  expr_count.rs  mod.rs  term_count.rs  uniform.rs
src/sketch/: analysis.rs  containment.rs  extract.rs  extraction.rs  full_sketch.rs  hashcons.rs  mod.rs  partial_sketch.rs  recursive.rs  utils.rs
src/sketch/extract/: mod.rs  mutable.rs  recursive.rs
src/trs/: mod.rs  symbols.rs
src/trs/arithmatic/: mod.rs  rules.rs
src/trs/arithmetic/: mod.rs  rules.rs
src/trs/halide/: data.rs  mod.rs  rules.rs
src/trs/rise/: mod.rs  rules.rs
src/trs/simple/: mod.rs
src/typing/: lang.rs  mod.rs  sketch.rs
tests/: big_eqsat.rs
(+37 files in other folders)
