[package]
name = "eggshell"
version = "0.0.1"
edition = "2021"
exclude = ["test.log", "data/", ".*"]
license = "GPL-3.0-or-later"

[lib]
# The name of the native library.
# This is the name which will be used in Python to import the library
# If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "eggshell"
# "cdylib" is necessary to produce a shared library for Python to import from.
# To use it from both Python and Rust, you need "cdylib" and "rlib".
crate-type = ["cdylib", "rlib"]

[dependencies]
bon = "2"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1"
egg = { git = "https://github.com/SaltyPeppermint/egg.git" , features = ["serde-1"] }
env_logger = "0.11.5"
hashbrown = { version = "0.14", features = ["rayon", "serde"] }
indexmap = { version = "2", features = ["serde"] }
indicatif = "0.17"
log = "0.4"
memory-stats = "1.2.0"
numpy = "0.22"
ordered-float = { version = "4", features = ["serde"] }
petgraph = "0.6"
pyo3 = { version = "0.22", features = ["hashbrown"] }
rand = "0.8"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1", features = ["const_generics", "serde"] }
symbolic_expressions = "5"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }


[[bench]]
name = "bench"
harness = false
# opt-level = 3
# lto = true
# codegen-units = 1

# [profile.release.build-override]
# opt-level = 2
# codegen-units = 16
