[package]
name = "eggshell"
version = "0.0.1"
edition = "2024"
exclude = ["test.log", "data/", ".*"]
license = "GPL-3.0-or-later"
default-run = "main"

[lib]
# The name of the native library.
# This is the name which will be used in Python to import the library
# If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "eggshell"
# "cdylib" is necessary to produce a shared library for Python to import from.
# To use it from both Python and Rust, you need "cdylib" and "rlib".
crate-type = ["cdylib", "rlib"]

[dependencies]
bon = "3"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1"
egg = { git = "https://github.com/SaltyPeppermint/egg.git", branch = "memory-limit", features = [
    "serde-1",
] }
env_logger = "0.11"
hashbrown = { version = "0.15", features = ["rayon", "serde"] }
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
memory-stats = "1.2"
num = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
ordered-float = { version = "4", features = ["serde"] }
pyo3 = { version = "0.23", features = ["hashbrown"] }
pyo3-stub-gen = "0.6.2"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1", features = ["const_generics", "serde"] }
strum = { version = "0.26.3", features = ["derive"] }
symbolic_expressions = "5"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release-with-debug]
inherits = "release"
debug = true

[[bench]]
name = "bench"
harness = false
