[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "eggshell"
version = "0.0.1"
description = "Python Wrappper around egg"
authors = [{ name = "Nicole Heinimann", email = "heinimann@tu-berlin.de" }]
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Topic :: Software Development :: Compilers",
  "Development Status :: 2 - Pre-Alpha",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[project.urls]
homepage = "https://github.com/SaltyPeppermint/egg-ml/eggshell"

[tool.uv]
# Rebuild package when any rust files change
cache-keys = [{file = "pyproject.toml"}, {file = "rust/Cargo.toml"}, {file = "**/*.rs"}]